<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="43dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/button_text"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="299dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/box_text"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="219dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:padding="0dp"
        android:src="@drawable/flag"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="99dp" />

    <Switch
        android:id="@+id/switc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:minHeight="48dp"
        android:text="@string/switch_text"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="299dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="369dp" />
</androidx.constraintlayout.widget.ConstraintLayout>